--- a/style.css
+++ b/style.css
@@ -6,9 +6,20 @@
 }
 
 body {
+    background: linear-gradient(#1a1a1a 0%, #041832 100%);
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: 'Inter', sans-serif;
+    overflow: hidden;
+    background-attachment: fixed; /* Manter a imagem de fundo fixa */
+}
+
+body {
     background-image: url('img/ONE.jpeg');
     background-size: cover;
-    background-position: center;
+    background-position: center; 
     background-repeat: no-repeat;
     min-height: 100vh;
     display: flex;
@@ -18,6 +29,12 @@ body {
     overflow: hidden;
 }
 
+@media screen and (max-width: 480px) {
+  .text {
+    font-size: 16px;
+  }
+}
+
 .container {
     width: 80%;
     max-width: 600px;
@@ -25,7 +42,7 @@ body {
     padding: 2rem;
     border-radius: 12px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
-    background-color: #3498db;
+    background-color: #3498db; 
     overflow: hidden;
 }
 
@@ -34,44 +51,22 @@ body {
 }
 
 #nivelSelecao,
-#numeroEscolhido,
-.container__input {
+#numeroEscolhido {
     width: 100%;
     height: 48px;
     border-radius: 8px;
+    background-color: #e67e22; 
     border: none;
+    color: white;
     padding: 1rem;
     font-size: 16px;
     font-weight: 700;
-}
-
-#nivelSelecao,
-#numeroEscolhido {
-    background-color: #e67e22;
-    color: white;
     margin-top: 1rem;
 }
 
-.container__input {
-    background-color: #F2F2F2;
-    color: #3498db;
-    transition: background-color 0.3s ease;
-}
-
-.container__input:focus {
-    background-color: #ffffff;
-}
-
-.container__botoes {
-    display: flex;
-    flex-direction: column;
-    gap: 1em;
-}
-
-.container__botao,
-#reiniciar,
-#chutar {
+.container__botao {
     border-radius: 8px;
+    background: #2ecc71; 
     padding: 12px 16px;
     width: 100%;
     font-size: 16px;
@@ -79,50 +74,37 @@ body {
     border: none;
     margin-top: 1rem;
     cursor: pointer;
-    transition: background-color 0.3s ease;
-}
-
-.container__botao {
-    background: #2ecc71;
-}
-
-.container__botao:hover {
-    background-color: #27ae60;
 }
 
 #reiniciar {
-    background: #e74c3c;
-}
-
-#reiniciar:hover {
-    background-color: #c0392b;
-}
-
-#chutar {
-    background: #2ecc71;
-}
-
-#chutar:hover {
-    background-color: #29b764;
+    background: #e74c3c; 
 }
 
 .container__texto {
     margin: 8px 0 16px;
-    opacity: 0;
-    animation: fadeIn 1s forwards;
-}
-
-@keyframes fadeIn {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
 }
 
 .container__texto-azul {
-    color: #e67e22;
+    color: #e67e22; 
+}
+
+.container__input {
+    width: 100%;
+    height: 48px;
+    border-radius: 8px;
+    background-color: #FFF;
+    border: none;
+    color: #3498db; 
+    padding: 1rem;
+    font-size: 16px;
+    font-weight: 700;
+    font-family: 'Inter', sans-serif;
+}
+
+.container__botoes {
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
 }
 
 .container__imagem-pessoa {
@@ -148,15 +130,4 @@ button {
 
 button:disabled {
     background-color: gray;
-}
-
-@media screen and (max-width: 480px) {
-    .container {
-        width: 90%;
-    }
-
-    .container__botao,
-    #reiniciar {
-        font-size: 14px;
-    }
 }
